[gd_scene load_steps=3 format=3 uid="uid://b4ihenj5hk5gd"]

[ext_resource type="Script" uid="uid://duxsj732hvtc6" path="res://leaderboard.gd" id="1_3ilyb"]
[ext_resource type="Texture2D" uid="uid://jsui27qh7rn8" path="res://assets/background/Mainmenubg.png" id="2_bg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ilyb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="leaderboard_list" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="back_button" type="Button" parent="ScrollContainer/leaderboard_list"]
layout_mode = 2

[node name="title_label" type="Label" parent="ScrollContainer/leaderboard_list"]
layout_mode = 2

[node name="player_rank_label" type="Label" parent="ScrollContainer/leaderboard_list"]
layout_mode = 2
